--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,21 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Jogo da Memória
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <ion-list radio-group>
+      <ion-list-header style="font-size: 20px">
+        Selecione a quantidade de cartas
+      </ion-list-header>
+        <button ion-item *ngFor="let option of cardsQuantity" (click)="setCardQuantity(option)">
+          {{ option }}
+          <ion-icon name="md-arrow-dropright" item-right></ion-icon>
+        </button>  
+    </ion-list>
+
+  <button ion-button block (click)="onCartas(5)">Jogar</button>
 </ion-content>
