--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="azul-piscina">
     <ion-title>
       Jogo da Memória
     </ion-title>
@@ -17,5 +17,4 @@
         </button>  
     </ion-list>
 
-  <button ion-button block (click)="onCartas(5)">Jogar</button>
 </ion-content>
