--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,8 +31,8 @@
     <hr>
     <ion-card class="dashed-border-purple">
       <ion-card-content text-center>
-        <span style="color: #757575; font-size: 20px">FOTO:</span>
-        <img [src]="photo.nativeURL" style="width: 100%" *ngIf="photo">
+        <span *ngIf="photos" >FOTOS:</span>
+        <img [src]="photo" style="width: 60%"  *ngFor="let photo of photos">
       </ion-card-content>    
     </ion-card>
 
