refactor sem o provider

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,14 +27,14 @@
         </button>
       </ion-card-content>    
     </ion-card>
-
+<!-- 
     <hr>
     <ion-card class="dashed-border-purple">
       <ion-card-content text-center>
         <span *ngIf="photos" >FOTOS:</span>
-        <img [src]="photo" style="width: 60%"  *ngFor="let photo of photos">
+        <img [src]="photo" style="width: 60%" *ngFor="let photo of photos">
       </ion-card-content>    
-    </ion-card>
+    </ion-card> -->
 
 
 
